fix(sbb-skiplink-list): avoid invisible content block (#3721)
With our previous fix, we unintentionally caused the skiplink list to
block the content behind it. This fix basically resets that behavior and
prevents the skiplink list from taking up space.

---------

--- a/src/elements/skiplink-list/skiplink-list.scss
+++ b/src/elements/skiplink-list/skiplink-list.scss
@@ -25,7 +25,7 @@
   & > :is(li, span) {
     @include sbb.shadow-level-5-hard;
 
-    display: inline-block;
+    display: list-item;
     height: var(--sbb-skiplink-list-height);
     overflow: var(--sbb-skiplink-list-overflow);
     border-radius: var(--sbb-border-radius-4x);
